--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
+body{
+	overflow: hidden;
+	height: 100vh;
+}
+
 .container {
 	width: 100vw;
 	height: 100vh;
